--- a/frontend/assets/index.html
+++ b/frontend/assets/index.html
@@ -66,7 +66,7 @@
 	</div>
   </section>
   <a href="#welcome" class="smooth-scr hidden" id="arrowUp"></a>
-  <section id="services" class="services-cl">
+  <section id="services" class="services-cl scrollBtn-on">
 	<div class="container">
 		<header class="services-cl-header">
 			<h2 class="services-cl-header-title">Services we provide</h2>
